--- a/caixa.html
+++ b/caixa.html
@@ -9,5 +9,11 @@
 </head>
 <body>
     
+    Valor a ser sacado:
+    <input type="text" id="valor">
+    <button onclick="Sacar()"> SACAR </button>
+    <br>
+    <div id="resultado"> </div>
+
 </body>
 </html>
