--- a/caixa.html
+++ b/caixa.html
@@ -9,11 +9,60 @@
 </head>
 <body>
     
-    Valor a ser sacado:
+    VALOR A SER SACADO: 
     <input type="text" id="valor">
-    <button onclick="Sacar()"> SACAR </button>
+    <button onclick="Sacar();"> SACAR </button>
     <br>
     <div id="resultado"> </div>
 
 </body>
+<script>
+
+    function Sacar()
+    {
+        v = parseInt(valor.value);
+        while(v >= 200)
+        {
+            resultado.innerHTML += " <br> <img src='200.png' width='100px'> ";
+            v = v - 200;
+        }
+
+        while(v >= 100)
+        {
+            resultado.innerHTML += " <br> <img src='100.png' width='100px'> ";
+            v = v - 100;
+        }
+
+        while(v >= 50)
+        {
+            resultado.innerHTML += " <br> <img src='50.png' width='100px'> ";
+            v = v - 50;
+        }
+
+        while(v >= 20)
+        {
+            resultado.innerHTML += " <br> <img src='20.png' width='100px'> ";
+            v = v - 20;
+        }
+
+        while(v >= 10)
+        {
+            resultado.innerHTML += " <br> <img src='10.png' width='100px'> ";
+            v = v - 10;
+        }
+
+        while(v >= 5)
+        {
+            resultado.innerHTML += " <br> <img src='5.png' width='100px'> ";
+            v = v - 5;
+        }
+
+        while(v >= 2)
+        {
+            resultado.innerHTML += " <br> <img src='2.png' width='100px'> ";
+            v = v - 2;
+        }
+    }
+
+</script>
 </html>
