--- a/caixa.html
+++ b/caixa.html
@@ -14,6 +14,13 @@
     <button onclick="Sacar();"> SACAR </button>
     <br>
     <div id="resultado"> </div>
+    <div id="resultado200"> </div>
+    <div id="resultado100"> </div>
+    <div id="resultado50"> </div>
+    <div id="resultado20"> </div>
+    <div id="resultado10"> </div>
+    <div id="resultado5"> </div>
+    <div id="resultado2"> </div>
 
 </body>
 <script>
@@ -23,31 +30,31 @@
         v = parseInt(valor.value);
         while(v >= 200)
         {
-            resultado.innerHTML += " <br> <img src='200.png' width='150px'> ";
+            resultado200.innerHTML += " <img src='200.png' width='150px'> ";
             v = v - 200;
         }
 
         while(v >= 100)
         {
-            resultado.innerHTML += " <br> <img src='100.png' width='150px'> ";
+            resultado100.innerHTML += " <img src='100.png' width='150px'> ";
             v = v - 100;
         }
 
         while(v >= 50)
         {
-            resultado.innerHTML += " <br> <img src='50.png' width='150px'> ";
+            resultado50.innerHTML += " <img src='50.png' width='150px'> ";
             v = v - 50;
         }
 
         while(v >= 20)
         {
-            resultado.innerHTML += " <br> <img src='20.png' width='150px'> ";
+            resultado20.innerHTML += " <img src='20.png' width='150px'> ";
             v = v - 20;
         }
 
         while(v >= 10)
         {
-            resultado.innerHTML += " <br> <img src='10.png' width='150px'> ";
+            resultado10.innerHTML += " <img src='10.png' width='150px'> ";
             v = v - 10;
         }
 
@@ -55,14 +62,14 @@
         {
             while(v >= 5)
             {
-                resultado.innerHTML += " <br> <img src='5.png' width='150px'> ";
+                resultado5.innerHTML += " <img src='5.png' width='150px'> ";
                 v = v - 5;
             }
         }
         
         while(v >= 2)
         {
-            resultado.innerHTML += " <br> <img src='2.png' width='150px'> ";
+            resultado2.innerHTML += " <img src='2.png' width='150px'> ";
             v = v - 2;
         }
     }
